--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,26 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Demo DOI</title>
+    <style>
+      #map {
+        width: 600px;
+        height: 1000px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="map"></div>
+    <script>
+      function initialise() {
+        window.map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -40.900557, lng: 174.885971},
+          zoom: 7
+        });
+      }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQmERm45qEbVVCNAgU97vfKYK09QmaiZ4&callback=initialise"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
